tests/negative/gold/no-nl3-test.gold
tests/negative/no-nl3-test.toit:9:5: error: Incomplete expression
  if
    ^
tests/negative/no-nl3-test.toit:9:3: error: Missing colon for 'if' condition
  if
  ^~
Compilation failed
